--- a/3.semester_eksamen_advanced_frontend_development-main/index.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/index.html
@@ -28,8 +28,7 @@
     />
   </head>
   <body>
-    <!-- ==================================== HERO SLIDESHOW
-        ==================================== -->
+    <!-- ==================================== HERO SLIDESHOW ==================================== -->
     <main>
       <h1>ASKA islænderklub Århus syd for isheste og islændere</h1>
       <div class="hero-wrapper">
@@ -40,7 +39,7 @@
               andre. Din passion kan både være stævner, skovture, banetræning, horsemanship – eller det, som giver dig
               glæde med din hest.
             </h5>
-            <a href="../om-aska.html">
+            <a href="/om-aska.html">
               <button id="hero-btn" class="hero-read-more button1 green">Læs mere</button>
             </a>
           </div>
@@ -61,29 +60,28 @@
               Aktiviteterne kan være alt fra professionel undervisning til foredrag og islænderspringning.
             </h5>
 
-            <a href="../om-aska.html">
+            <a href="/om-aska.html">
               <button id="hero-btn" class="hero-read-more button1 green">Læs mere</button>
             </a>
           </div>
         </section>
       </div>
 
-      <!-- ==================================== HERO BUTTON SECTION
-                ==================================== -->
+      <!-- ==================================== HERO BUTTON SECTION ==================================== -->
       <section class="button-section">
-        <a href="../bliv-en-del-af-aska.html">
+        <a href="/bliv-en-del-af-aska.html">
           <button class="button2 dark-green2">
             <p class="btn-text1">Bliv</p>
             <p class="btn-text2">medlem</p>
           </button>
         </a>
-        <a href="../kalender.html">
+        <a href="/kalender.html">
           <button class="button2 light-green">
             <p class="btn-text1">Gå til</p>
             <p class="btn-text2">kalender</p>
           </button>
         </a>
-        <a href="../bliv-en-del-af-aska.html">
+        <a href="/bliv-en-del-af-aska.html">
           <button class="button2 dark-green">
             <p class="btn-text1">Bliv</p>
             <p class="btn-text2">frivillig</p>
@@ -91,8 +89,7 @@
         </a>
       </section>
       <div class="whitespace"></div>
-      <!-- ==================================== MEDLEMSFORDELE
-                ==================================== -->
+      <!-- ==================================== MEDLEMSFORDELE ==================================== -->
       <section class="medlemsfordele">
         <h2>Medlemsfordele</h2>
         <div class="whitespace"></div>
@@ -273,26 +270,24 @@
           </div>
         </div>
       </section>
-      <!-- ==================================== HURTIG LINKS SECTION
-                ==================================== -->
+      <!-- ==================================== HURTIG LINKS SECTION ==================================== -->
       <div class="whitespace"></div>
       <div class="whitespace"></div>
       <h2 class="hurtiglinks">Hurtig links</h2>
       <div class="whitespace"></div>
       <section class="button-section2">
-        <a href="../aska-ture.html">
+        <a href="/aska-ture.html">
           <button class="button1 light-green">ASKA Ture</button>
         </a>
-        <a href="../aska-foredrag_og_kursus.html">
+        <a href="/aska-foredrag_og_kursus.html">
           <button class="button1 dark-green">ASKA Foredrag og kursus</button>
         </a>
-        <a href="../aska-ungdom.html">
+        <a href="/aska-ungdom.html">
           <button class="button1 dark-green2">ASKA Ungdom</button>
         </a>
       </section>
       <div class="whitespace"></div>
-      <!-- ==================================== VILHELMSBORG SECTION
-                ==================================== -->
+      <!-- ==================================== VILHELMSBORG SECTION ==================================== -->
       <div class="greenspace"></div>
       <section class="vilhelmsborg">
         <div class="vilhelmsborg_flex">
@@ -305,11 +300,11 @@
           </div>
         </div>
       </section>
-      <!-- ==================================== SPONSOR SECTION
-                ==================================== -->
+      <!-- ==================================== SPONSOR SECTION ==================================== -->
       <div class="greenspace"></div>
       <section class="sponsorer" id="sponsorer">
         <h2>Tak til ASKA sponsorer</h2>
+        <div class="whitespace"></div>
         <div class="whitespace"></div>
         <div class="sponsor_logo_container">
           <section class="sponsor-logos slider">
@@ -323,14 +318,13 @@
 
         <div class="whitespace"></div>
         <div class="whitespace"></div>
-        <a href="../bliv-en-del-af-aska.html">
+        <a href="/bliv-en-del-af-aska.html">
           <button class="button1 dark-green">Bliv sponsor</button>
         </a>
         <div class="whitespace"></div>
         <div class="loggedinSponsor"></div>
       </section>
-      <!-- ==================================== SoMe SECTION
-        ==================================== -->
+      <!-- ==================================== SoMe SECTION ==================================== -->
       <div class="greenspace"></div>
       <section class="some-section">
         <div class="background_filter">
