--- a/3.semester_eksamen_advanced_frontend_development-main/index.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/index.html
@@ -39,7 +39,7 @@
               andre. Din passion kan både være stævner, skovture, banetræning, horsemanship – eller det, som giver dig
               glæde med din hest.
             </h5>
-            <a href="/om-aska.html">
+            <a href="om-aska.html">
               <button id="hero-btn" class="hero-read-more button1 green">Læs mere</button>
             </a>
           </div>
@@ -60,7 +60,7 @@
               Aktiviteterne kan være alt fra professionel undervisning til foredrag og islænderspringning.
             </h5>
 
-            <a href="/om-aska.html">
+            <a href="om-aska.html">
               <button id="hero-btn" class="hero-read-more button1 green">Læs mere</button>
             </a>
           </div>
@@ -69,19 +69,19 @@
 
       <!-- ==================================== HERO BUTTON SECTION ==================================== -->
       <section class="button-section">
-        <a href="/bliv-en-del-af-aska.html">
+        <a href="bliv-en-del-af-aska.html">
           <button class="button2 dark-green2">
             <p class="btn-text1">Bliv</p>
             <p class="btn-text2">medlem</p>
           </button>
         </a>
-        <a href="/kalender.html">
+        <a href="kalender.html">
           <button class="button2 light-green">
             <p class="btn-text1">Gå til</p>
             <p class="btn-text2">kalender</p>
           </button>
         </a>
-        <a href="/bliv-en-del-af-aska.html">
+        <a href="bliv-en-del-af-aska.html">
           <button class="button2 dark-green">
             <p class="btn-text1">Bliv</p>
             <p class="btn-text2">frivillig</p>
@@ -276,13 +276,13 @@
       <h2 class="hurtiglinks">Hurtig links</h2>
       <div class="whitespace"></div>
       <section class="button-section2">
-        <a href="/aska-ture.html">
+        <a href="aska-ture.html">
           <button class="button1 light-green">ASKA Ture</button>
         </a>
-        <a href="/aska-foredrag_og_kursus.html">
+        <a href="aska-foredrag_og_kursus.html">
           <button class="button1 dark-green">ASKA Foredrag og kursus</button>
         </a>
-        <a href="/aska-ungdom.html">
+        <a href="aska-ungdom.html">
           <button class="button1 dark-green2">ASKA Ungdom</button>
         </a>
       </section>
@@ -318,7 +318,7 @@
 
         <div class="whitespace"></div>
         <div class="whitespace"></div>
-        <a href="/bliv-en-del-af-aska.html">
+        <a href="bliv-en-del-af-aska.html">
           <button class="button1 dark-green">Bliv sponsor</button>
         </a>
         <div class="whitespace"></div>
