--- a/3.semester_eksamen_advanced_frontend_development-main/aska-staevner.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/aska-staevner.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/fav_icon.svg" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="images/fav_icon.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta name="author" content="Maja Wennerwald, Camilla Nørgaard & Jesper Krüger" />
     <title>ASKA | ASKA Stævner</title>
     <meta name="title" content="ASKA | ASKA Stævner" />
@@ -184,11 +184,11 @@
         </div>
         <!------ Sponsorer -------->
         <div class="e grid-img">
-          <button class="button3" onclick="window.location.href='/bliv-en-del-af-aska.html'">Sponsorer</button>
+          <button class="button3" onclick="window.location.href='bliv-en-del-af-aska.html'">Sponsorer</button>
         </div>
         <!------ KALENDER OG TILMELDING -------->
         <div class="f grid-img">
-          <button class="button3" onclick="window.location.href='/kalender.html'">Kalender og tilmelding</button>
+          <button class="button3" onclick="window.location.href='kalender.html'">Kalender og tilmelding</button>
         </div>
         <!------ WEBSHOP -------->
         <div class="g grid-img">
@@ -201,7 +201,7 @@
       <div class="whitespace"></div>
     </main>
     <div class="greenspace"></div>
-    <script src="/js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
   </body>
 </html>
