--- a/3.semester_eksamen_advanced_frontend_development-main/aska-ungdom.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/aska-ungdom.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/fav_icon.svg" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="images/fav_icon.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta name="author" content="Maja Wennerwald, Camilla Nørgaard & Jesper Krüger" />
     <title>ASKA | ASKA Ungdom</title>
     <meta name="title" content="ASKA | ASKA Ungdom" />
@@ -223,7 +223,7 @@
       <div class="whitespace"></div>
     </main>
     <div class="greenspace"></div>
-    <script src="/js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
   </body>
 </html>
