--- a/3.semester_eksamen_advanced_frontend_development-main/bliv-en-del-af-aska.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/bliv-en-del-af-aska.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/fav_icon.svg" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="images/fav_icon.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta name="author" content="Maja Wennerwald, Camilla Nørgaard & Jesper Krüger" />
     <title>ASKA | Bliv en del af ASKA</title>
     <meta name="title" content="ASKA | Bliv en del af ASKA" />
@@ -126,7 +126,7 @@
                   Kristina Christensen.
                 </p>
                 <p>
-                  <a href="/files/staldambassador_artikel.pdf" download="download">
+                  <a href="files/staldambassador_artikel.pdf" download="download">
                     <button class="button1 green section-button">Læs artikel</button>
                   </a>
                 </p>
@@ -244,7 +244,7 @@
       <div class="whitespace"></div>
     </main>
     <div class="greenspace"></div>
-    <script src="/js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
   </body>
 </html>
