--- a/3.semester_eksamen_advanced_frontend_development-main/om-aska.html
+++ b/3.semester_eksamen_advanced_frontend_development-main/om-aska.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="/images/fav_icon.svg" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/reset.css" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="shortcut icon" href="images/fav_icon.svg" type="image/x-icon" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <meta name="author" content="Maja Wennerwald, Camilla Nørgaard & Jesper Krüger" />
     <title>ASKA | Om ASKA</title>
     <meta name="title" content="ASKA | Om ASKA" />
@@ -115,29 +115,29 @@
 
                 <div class="bestyrelse-grid">
                   <p class="bestyrelse-grid-one">
-                    <img class="bestyrelse-img" src="/images/pernille.jpg" alt="bestyrelsesmedlem" /><br />
+                    <img class="bestyrelse-img" src="images/pernille.jpg" alt="bestyrelsesmedlem" /><br />
                     FORMAND<br />
                     Pernille Maj Svendsen<br />
                     Mail: aska.pernille.svendsen@gmail.com<br /><br />
-                    <img class="bestyrelse-img" src="/images/siri.jpg" alt="bestyrelsesmedlem" /><br />
+                    <img class="bestyrelse-img" src="images/siri.jpg" alt="bestyrelsesmedlem" /><br />
                     NÆSTFORMAND<br />
                     Siri Fog<br />
                     Mail: siri_fog@hotmail.com<br /><br />
-                    <img class="bestyrelse-img" src="/images/louise.jpg" alt="bestyrelsesmedlem" /><br />
+                    <img class="bestyrelse-img" src="images/louise.jpg" alt="bestyrelsesmedlem" /><br />
                     KASSERER<br />
                     Louise Elgaard<br />
                     Mail: louise.elgaard@gmail.com
                   </p>
                   <p class="bestyrelse-grid-two">
-                    <img class="bestyrelse-img" src="/images/aimie.jpg" alt="bestyrelsesmedlem" /><br />
+                    <img class="bestyrelse-img" src="images/aimie.jpg" alt="bestyrelsesmedlem" /><br />
                     BESTYRRELSESMEDLEM<br />
                     Aimie Bjørnsholm<br />
                     Mail: aimiemb@gmail.com<br /><br />
-                    <img class="bestyrelse-img" src="/images/lone.jpg" alt="bestyrelsesmedlem" /><br />
+                    <img class="bestyrelse-img" src="images/lone.jpg" alt="bestyrelsesmedlem" /><br />
                     BESTYRRELSESMEDLEM<br />
                     Lone Skriver Premante<br />
                     Mail: lone.premate@hotmail.com<br /><br />
-                    <img class="bestyrelse-img" src="/images/lise.jpg" alt="bestyrelsesmedlem" /><br />
+                    <img class="bestyrelse-img" src="images/lise.jpg" alt="bestyrelsesmedlem" /><br />
                     SUPPLEANT<br />
                     Lise Uhre Pless<br />
                     Mail: lise@uhrepless.dk
@@ -215,7 +215,7 @@
                 <li>SOEMMI HORSES & ALPACAS, Rikke Bervig</li>
                 <li>Villagaarden, Maria Bill</li>
               </ul>
-              <a href="/bliv-en-del-af-aska.html">
+              <a href="bliv-en-del-af-aska.html">
                 <button class="button1 dark-green section-button">Bliv staldambassadør</button>
               </a>
             </div>
@@ -256,7 +256,7 @@
                   hinanden.<br /><br />
                   Download og læs Aska's vedtægter her:
                 </p>
-                <a href="/files/vedtaegter_aska_revideret_2021.pdf" download="download">
+                <a href="files/vedtaegter_aska_revideret_2021.pdf" download="download">
                   <button class="button1 green section-button">Download vedtægter</button>
                 </a>
               </div>
@@ -292,7 +292,7 @@
       <div class="whitespace"></div>
     </main>
     <div class="greenspace"></div>
-    <script src="/js/main.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
   </body>
 </html>
